<resources>
    <string name="app_name">Contacts</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="number">Number</string>
    <string name="notes">Notes:</string>
    <string name="new_contact">New contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="contact_photo">ContactPhoto</string>
    <string name="edit">Edit</string>
    <string name="sort_by">Sort by:</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="delete_selected">Delete Selected</string>
</resources>